# qc-backend

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  AUDITORIA_FORENSE_END_TO_END.md  AUDIT_REPORT.md  CHANGES_REPORT.md  CLAUDE.md  Dockerfile  HOMOLOGATION_REPORT.md  PRISMA_SYNC.md  README.md  README_QUANTUM.md  create_routes.sh  package-lock.json  package.json  postman_collection_v2.json  server_log.txt  sync-db.sh  tsconfig.json  vitest.config.ts
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
__mocks__/: algosdk.ts
contracts/solana/escrow/programs/escrow/: Cargo.toml
contracts/solana/escrow/programs/escrow/src/: lib.rs
contracts/soroban/payment/: Cargo.toml
contracts/soroban/payment/src/: lib.rs
docs/: 1_INTERNAL_ARCHITECTURE.md  2_PUBLIC_API_REFERENCE.md  3_WHITEPAPER_QUANTUM_CERT.md  4_ZERO_TO_HERO_PLAYBOOK.md
prisma/: schema.prisma
scripts/: stress-test.ts  test-algosdk.ts  test-falcon.ts  validate-algorand-omnibus.ts  validate-diamond.ts  validate-hardware-proxy.ts  validate-phase3.ts  validate-phase4.ts  validate-phase5.ts  validate-phase6.ts  validate-zeroknowledge.ts
src/: server.ts
tests/: admin-api-keys.test.ts  admin-authorization.test.ts  admin-tenant-lifecycle.test.ts  agent-event.test.ts  agent-registry.test.ts  anchor-queue-skip-locked.test.ts  anchor-queue-stellar.test.ts  api-key-scope-guard.test.ts  api-key-scopes.test.ts  api-request-audit.test.ts  asset-controller.test.ts  billing-facet.test.ts  blockchain-observer.test.ts  bootstrap-configured-api-key.test.ts  commissioning.test.ts  (+34 more)
(+269 files in other folders)
