[package]
name = "quantum-cert-payment"
version = "0.1.0"
edition = "2021"
description = "Quantum Cert Soroban Payment & Escrow Contract for Stellar"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "22.0.0" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
overflow-checks = true
